<resources>
    <string name="app_name">Quiet</string>
    <string name="open_navigation_drawer">打开抽屉</string>
    <string name="close_navigation_drawer">关闭导航抽屉</string>
    <string name="nav_others">其他</string>
    <string name="single_song">单曲</string>
    <string name="artist">歌手</string>
    <string name="album">专辑</string>
    <string name="playing_list">播放列表</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="empty_hint">空数据</string>
    <string name="add_to_favorite">Like</string>
    <string name="remove_from_favorite">Dislike</string>
    <string name="move_to_trash">Do Not Recommend This One</string>
    <string name="skip_to_previous">Skip Previous</string>
    <string name="skip_to_next">Skip Next</string>
    <string name="exit_player">Exit</string>
    <string name="title_local_scanner">本地音乐扫描</string>
    <string name="start_local_scanner">开始扫描</string>
    <string name="processing_local_scanner">正在扫描:%s</string>
    <string name="template_scanner_result">共扫描到%d首歌曲</string>
    <string name="end_local_scanner">结束</string>
    <string name="stop_local_scanner">停止扫描</string>
    <string name="local_scanner_hint">点击开始扫描以检索手机中的音乐。</string>
    <string name="toast_read_storage_permission_denied">没有权限访问内置存储</string>
    <string name="local_scanner_setting_title">扫描设置</string>
    <string name="local_scan_setting">扫描设置</string>
    <string name="action_search">search</string>
    <string name="play_lists_created">创建的歌单</string>
    <string name="play_lists_collection">收藏的歌单</string>
    <string name="nav_local_music">本地音乐</string>
    <string name="nav_history">最近播放</string>
    <string name="nav_collection">我的收藏</string>
    <string name="nav_download">下载管理</string>
    <string name="nav_radio">私人FM</string>
    <string name="nav_daily_recommend">每日推荐</string>
    <string name="nav_tends">排行榜</string>
    <string name="template_item_play_list_count">共%d首</string>
    <string name="template_music_list_header_subtitle">(共%d首)</string>
    <string name="login_hint_phone">手机号</string>
    <string name="action_login">登陆</string>
    <string name="user_not_login">未登录</string>
    <string name="title_play_list">歌单</string>
    <string name="action_comment">评论</string>
    <string name="action_share">分享</string>
    <string name="action_download">下载</string>
    <string name="action_multi_select">多选</string>
    <string name="action_play_all">播放全部</string>
    <string name="add_to_collection">收藏</string>
    <string name="collected">已收藏</string>
    <string name="title_daily_recommend">每日推荐</string>
    <string name="tips_daily_recommend_description">专属每日推荐，每天早上6:00自动生成。</string>
    <string name="toast_no_music_to_play">当前没有歌曲可供播放！</string>
    <string name="action_remove">移除</string>
    <string name="link_to_music">定位歌曲</string>
    <string name="playmode_sequence">顺序播放</string>
    <string name="playmode_shuffle">随机播放</string>
    <string name="playmode_single">单曲循环</string>
    <string name="leader_board">排行榜</string>
    <string name="leader_board_official">官方榜</string>
    <string name="leader_board_global">全球榜</string>
    <string name="load_retry">加载失败，点击重试。</string>
    <string name="recommend_playlists">推荐歌单</string>
    <string name="new_songs">最新音乐</string>
</resources>
